--- a/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_SearchBox.cshtml
@@ -7,7 +7,7 @@
     }
 
 }
-<div class="column col-xs-12 col-sm-3" id="left_column">
+
     <div class="block left-module">
         <div class="block left-module search">
             <p class="title_block border-b tittle-b bw">Tìm kiếm</p>
@@ -50,9 +50,11 @@
                     <div class="form-group">
                         <label>Sắp xếp</label>
                         <select class="form-control" name="SortBy">
-                            <option value="pricedesc">Giá tăng dần</option>
-                            <option value="pricedasc">Giá giảm dần</option>
+                            <option value="priceAsc">Giá tăng dần</option>
+                            <option value="priceDesc">Giá giảm dần</option>
                             <option value="timeDesc">Mới nhất</option>
+                            <option value="nameAsc">Tên A-Z</option>
+                            
                         </select>
                     </div>
                     <div class="form-group">
@@ -73,4 +75,4 @@
             </div>
         </div>
     </div>
-</div>
+
