--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -378,7 +378,7 @@
                                 {
                                     <div class="col-md-4 col-sm-6">
                                         <div class="banner-boder-zoom vendor-list">
-                                            <a href="@item.ClickUrl">
+                                            <a href="@item.ClickUrl" target="_blank" rel="nofollow">
                                                 <img alt="@item.Description" src="@item.ImagesUrl" title="@item.Description" />
                                             </a>
                                         </div>
