--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -88,7 +88,7 @@
                                     <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
                                     <li><a href="#about">Về chúng tôi</a></li>
                                     <li><a href="#philosophy">Công nghệ</a></li>                                    
-                                    <li><a href="/huong-dan-su-dung-b115">Hướng dẫn</a></li>
+                                    <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="#images">Hình Ảnh</a></li>
                                     <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
                                     
