--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -89,8 +89,8 @@
                                     <li><a href="#about">Về chúng tôi</a></li>
                                     <li><a href="#philosophy">Công nghệ</a></li>                                    
                                     <li><a href="/blog">Hướng dẫn</a></li>
-                                    <li><a href="#images">Hình Ảnh</a></li>
-                                    <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
+                                    <li><a href="#contact">Liên hệ</a></li>
+                                    <li><a href="/products" title="Sản phẩm">Sản phẩm</a></li>
                                     
                                 }
                                 else
@@ -99,9 +99,11 @@
                                     <li><a href="/#about">Về chúng tôi</a></li>
                                     <li><a href="/#philosophy">Công nghệ</a></li>
                                     <li><a href="/blog">Hướng dẫn</a></li>
-                                    <li><a href="/#images">Hình Ảnh</a></li>
-                                    <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
-                                   
+                                    <li><a href="/contact">Liên hệ</a></li>
+                                    
+                                      < li >< a href = "/products" title = "Sản phẩm" > Thiết kế web</ a ></ li >
+
+
                                 }
                             @*}*@
                         </ul>
