--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -85,7 +85,7 @@
                             {*@
                                 @if (ViewBag.pageName != null && !Request.Browser.IsMobileDevice && ViewBag.pageName == "home")
                                 {
-                                    <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
+                                   
                                     <li><a href="#about">Về chúng tôi</a></li>
                                     <li><a href="#philosophy">Công nghệ</a></li>                                    
                                     <li><a href="/blog">Hướng dẫn</a></li>
@@ -95,15 +95,12 @@
                                 }
                                 else
                                 {
-                                    <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
+                                  
                                     <li><a href="/#about">Về chúng tôi</a></li>
                                     <li><a href="/#philosophy">Công nghệ</a></li>
                                     <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="/contact">Liên hệ</a></li>
-                                    
-                                      < li >< a href = "/products" title = "Sản phẩm" > Thiết kế web</ a ></ li >
-
-
+                                    <li><a href="/products" title="Sản phẩm">Sản phẩm</a></li>
                                 }
                             @*}*@
                         </ul>
