--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -18,10 +18,11 @@
         <div class="row">
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
-                    <h2>Anpero là gì?</h2>
-                    <p>Anpero là hệ thống web quản lý bán hàng tập trung trên công nghệ điện toán đám mây, với Anpero khách sẽ có hệ thống web bán hàng vô cùng chuyên nghiệp, các chức năng được cập nhật miễn phí và đều đặn so với việc bạn thuê viết một trang đơn lẻ. Hơn thế nữa khách hàng có thể tự chủ về  mã nguồn giao diện web, nơi lưu trữ web bán hàng (hosting)...</p>
-                    <p>Sử dụng hệ thống anpero quý khách hàng sẽ giảm chi phí rất nhiêu nếu muốn thiết kế một trang web chuyên nghiệp, Có khả năng tương tác tuyệt vời như nhắn tin, gửi mail tự động và miễn phí cho bạn khi có khách đặt hàng, đảm bảo quý khách không bỏ lỡ bất cứ đơn hàng nào</p>
-                    
+                    <h2>Sứ mệnh Ofrezh</h2>
+                    <p>Trước tiên, hệ thống nông trại Ofrezh Farming System chỉ sản xuất phân bón, đất trồng, thức ăn chăn nuôi phụ phẩm nông nghiệp 100% hữu cơ từ nguồn nhiên liệu tự nhiêu sẵn có trong nước.</p>
+                    <p>Song song với đó, chúng tôi cũng sử dụng chính các nguyên liệu sản phẩm từ đàu vào đó để sản xuất thực phẩm hữu cơ tự nhiên như rau hữu cơ, thịt lợn, trứng gà, trứng vịt...</p>
+                    <p>Nguyên tắc bất biến của Ofrezh là hoàn toàn không sử dụng hóa chất, phân bón hóa học, thuốc bảo vệ thực vật, thuốc trừ sâu... trong quy trình sản xuất nông sản kể cả khâu đóng gói, bảo quản</p>
+
                 </div>
             </div>
         </div>
@@ -112,7 +113,7 @@
                                 <div class="photography-icon">
                                     <i class="fa fa-cogs"></i>
                                 </div>
-                                <h2>Công nghệ lập trình</h2>
+                                <h2>Công nghệ bảo quản</h2>
                                 <p>Nền tảng để xây dựng Anpero là .NET Core, Sql Server đây là các công nghệ mà hầu hết các ngân hàng trên thế giới sử dụng. Thêm vào đó với sự hỗ trợ của trí thông minh nhân tạo của Microsoft’s giúp Anpero cập nhật và duy trì sự ổn định của hệ thống ở mức cao nhất</p>
                             </div>
                         </li>
@@ -121,7 +122,7 @@
                                 <div class="photography-icon">
                                     <i class="fa fa-database"></i>
                                 </div>
-                                <h2>Lưu trữ an toàn</h2>
+                                <h2>Công nghệ nuôi trùn quế</h2>
                                 <p>Cloud Server xây dựng trên nền tảng công nghệ điện toán đám mây Azure đảm bảo hệ thống chịu được tải cực lớn. Sử dụng SQL Data Warehouse của Microsoft được các kỹ sư giỏi nhất thế giới đảm bảo về độ an toàn và ổn định </p>
                             </div>
                         </li>
@@ -130,7 +131,7 @@
                                 <div class="photography-icon">
                                     <i class="fa fa-puzzle-piece "></i>
                                 </div>
-                                <h2>Khả năng tự chủ</h2>
+                                <h2>Công nghệ trồng rau hữu cơ</h2>
                                 <p>Sử dụng nền tảng quản lý web bán hàng Anpero bạn có thể tự tùy bến web nếu biết chút ít về lập trình. Ngoài ra bạn cũng có thể tự chủ về nơi đặt frontend website (hosting) nếu dịch vụ của chúng tôi không làm bạn hài lòng.</p>
                             </div>
                         </li>
