--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -100,10 +100,7 @@
                                     <li><a href="/#philosophy">Công nghệ</a></li>
                                     <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="/contact">Liên hệ</a></li>
-                                    
-                                      < li >< a href = "/products" title = "Sản phẩm" > Thiết kế web</ a ></ li >
-
-
+                                    <li><a href="/products" title="Sản phẩm">Sản phẩm</a></li>
                                 }
                             @*}*@
                         </ul>
