--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                         <div class="page-title">
-                            <h2>Thông tin Anpero</h2>
+                            <h2>Thông tin @commonInfo.Name</h2>
                         </div>
                     </div>
                 </div>
