--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
     
     @RenderBody()
     <footer class="footer-area">
-        <div class="footer-top section-padding">
+        <div class="footer-top section-padding section-padding2">
             <div class="container">
                 <div class="row">
                     <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
