--- a/06_Shop_Onepage/assets/css/responsive.css
+++ b/06_Shop_Onepage/assets/css/responsive.css
@@ -13,6 +13,7 @@
 /* Tablet Layout: 768px. */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
     .news-list {
         margin-bottom: 70px;
     }
@@ -45,6 +46,12 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px) {
+    .products-list .product-shop{
+        width:100%;
+    }
+    .products-list .product-image {
+        width: 100%;
+    }
     .mainmenu .navbar-toggle {
         border: 2px solid #fafafa;
         border-radius: 2px;
