--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -123,6 +123,9 @@ textarea.form-control:focus {
 .section-padding {
     padding: 155px 0;
 }
+.section-padding2 {
+    padding: 55px 0;
+}
 
 .padding-top {
     padding-top: 120px;
@@ -1643,3 +1646,35 @@ a{color:black;}
     border-width: 1px;
 }
 #prCatCtTable img{max-width:150px;}
+.product-view .product-name h1 {
+    font-size: 28px;
+    margin: 0 0 2px;
+    text-align: left;
+    line-height: 1.2em;
+    padding-bottom: 12px;
+    letter-spacing: normal;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
+.product-view .product-name {
+    border-bottom: #ececec double;
+}
+#product .pb-right-column .form-action .button-group {
+    margin-top: 15px;
+    overflow: hidden;
+}
+    #product .pb-right-column .form-action .button-group .wishlist, #product .pb-right-column .form-action .button-group .compare {
+        min-width: 50px;
+        padding-right: 15px;
+        text-align: center;
+        float: left;
+    }
+        #product .pb-right-column .form-action .button-group .wishlist .fa, #product .pb-right-column .form-action .button-group .compare .fa {
+            font-size: 18px;
+            width: 30px;
+            height: 30px;
+            color: #fff;
+            line-height: 30px;
+            background: rgba(0, 0, 0, 0.4) none repeat scroll 0% 0%;
+            border-radius: 90%;
+        }
