--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -35,7 +35,11 @@
         <div class="service ">
             <div class="col-xs-6 col-sm-4 service-item">
                 <div class="icon">
-                    <img alt="services" src="/assets/data/s1.png">
+                    <amp-img width="375" height="375" src="/assets/data/s1.png" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
+                        <noscript>
+                            <img src="/assets/data/s1.png" class="img-responsive" />
+                        </noscript>
+                    </amp-img>                    
                 </div>
                 <div class="info">
                     <a href="/policy/ship"><h3>Miễn phí ship</h3></a>
@@ -45,9 +49,12 @@
 
             <div class="col-xs-6 col-sm-4 service-item">
                 <div class="icon">
-                    <img alt="services" src="/assets/data/s3.png">
+                    <amp-img width="375" height="375" src="/assets/data/s3.png" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
+                        <noscript>
+                            <img src="/assets/data/s3.png" class="img-responsive" />
+                        </noscript>
+                    </amp-img>                    
                 </div>
-
                 <div class="info">
                     <a href="/"><h3>Tư vấn 24/7</h3></a>
                     <span>Đừng ngại gọi cho chúng tôi</span>
@@ -55,13 +62,77 @@
             </div>
             <div class="col-xs-6 col-sm-4 service-item">
                 <div class="icon">
-                    <img alt="services" src="/assets/data/s4.png">
+                    <amp-img width="375" height="375" src="/assets/data/s4.png" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
+                        <noscript>
+                            <img src="/assets/data/s4.png" class="img-responsive" />
+                        </noscript>
+                    </amp-img>
                 </div>
                 <div class="info">
                     <a href="/policy/payment"><h3>Thanh toán an toàn</h3></a>
                     <span>Qua COD hoặc ngân hàng</span>
                 </div>
             </div>
+        </div>
+        <div class="col-md-12 col-xs-12 col-sm-12 page-top-left">
+            <h2 class="page-heading">
+                <span class="page-heading-title">Đang khuyến mãi</span>
+            </h2>
+            <ul class="product-list owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="5" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3},"1100":{"items":4}}'>
+                @if (ViewData["SaleProduct"] != null)
+                {
+                    AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
+                    foreach (ProductItem item in saleProduct)
+                    {
+                        <li>
+                            <div class="product-container">
+                                <div class="left-block">
+                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
+                                        <amp-img width="375" height="375" src="@item.Images" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
+                                            <noscript>
+                                                <img src="@item.Images" class="img-responsive" />
+                                            </noscript>
+                                        </amp-img>
+                                        @if (item.Rank >= 1)
+                                        {
+                                            <div class="featured-text"><span>Bán chạy</span></div>
+                                        }
+                                    </a>
+                                    <div class="quick-view">
+                                        <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
+                                    </div>
+                                    <div class="add-to-cart">
+                                        <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')">Đặt mua</a>
+                                    </div>
+                                    <div class="group-price">
+                                        <span class="product-new">Mới</span>
+                                        @if (item.IsSale)
+                                        {
+                                            <span class="product-sale">- @Anpero.StringHelpper.ConVertToMoneyFormatInt(((item.Price - item.SalePrice) / item.Price * 100).ToString()) %</span>
+                                        }
+
+                                    </div>
+                                </div>
+                                <div class="right-block">
+                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
+                                    <div class="content_price">
+                                        @if (item.IsSale)
+                                        {
+                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                        }
+                                    </div>
+
+                                </div>
+                            </div>
+                        </li>
+                    }
+                }
+            </ul>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 page-top-left">
             <h2 class="page-heading">
@@ -133,66 +204,7 @@
             </div>
 
         </div>
-        <div class="col-xs-12 col-sm-12 page-top-left">
-            <h2 class="page-heading">
-                <span class="page-heading-title">Đang khuyến mãi</span>
-            </h2>
-            <ul class="product-list owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="5" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3},"1100":{"items":4}}'>
-                @if (ViewData["SaleProduct"] != null)
-                {
-                    AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
-                    foreach (ProductItem item in saleProduct)
-                    {
-                        <li>
-                            <div class="product-container">
-                                <div class="left-block">
-                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
-                                        <amp-img width="375" height="375" src="@item.Images" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'>
-                                            <noscript>
-                                                <img src="@item.Images" class="img-responsive" />
-                                            </noscript>
-                                        </amp-img>
-                                        @if (item.Rank >= 1)
-                                        {
-                                            <div class="featured-text"><span>Bán chạy</span></div>
-                                        }
-                                    </a>
-                                    <div class="quick-view">
-                                        <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
-                                    </div>
-                                    <div class="add-to-cart">
-                                        <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')">Đặt mua</a>
-                                    </div>
-                                    <div class="group-price">
-                                        <span class="product-new">Mới</span>
-                                        @if (item.IsSale)
-                                        {
-                                            <span class="product-sale">- @Anpero.StringHelpper.ConVertToMoneyFormatInt(((item.Price - item.SalePrice) / item.Price * 100).ToString()) %</span>
-                                        }
 
-                                    </div>
-                                </div>
-                                <div class="right-block">
-                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
-                                    <div class="content_price">
-                                        @if (item.IsSale)
-                                        {
-                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
-                                        }
-                                        else
-                                        {
-                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                        }
-                                    </div>
-
-                                </div>
-                            </div>
-                        </li>
-                    }
-                }
-            </ul>
-        </div>
         <div class="col-xs-12 col-sm-12 page-top-left">
             <div class="popular-tabs">
                 <ul class="nav-tab">
@@ -270,12 +282,12 @@
                         <div class="col-sm-6">
                             <div class="banner-boder-zoom">
                                 <a href="@slide[i].ClickUrl" target="_blank">
-                                    <amp-img  width="408" height="179" src="@slide[i].ImagesUrl" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="@slide[i].Description">
+                                    <amp-img width="408" height="179" src="@slide[i].ImagesUrl" layout="responsive" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="@slide[i].Description">
                                         <noscript>
                                             <img src="@slide[i].ImagesUrl" />
                                         </noscript>
                                     </amp-img>
-                                   
+
                                 </a>
                             </div>
                         </div>
