--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -30,11 +30,11 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="https://media.anpero.com/images/38/72018/32018071020081358.jpg" alt="pet" style="height:100px;">
+                        <img src="https://media.anpero.com/images/29/82018/seed100x1002018082017502539.png" alt="pet" style="height:100px;">
                     </div>
-                    <h2>Giải pháp</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <h2>Hạt giống</h2>
+                    <p>Củ và hạt giống được nhập từ các công ty uy tín nhất thế giới. Đảm bảo tỷ lệ nảy mầm cao. </p>
+                    <a href="/hat-giong-c55" class="read-more">Read more</a>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 xs-bottom-40 xs-bottom-40 wow fadeIn">
@@ -52,19 +52,15 @@
                     <div class="service-photo">
                         <img src="https://media.anpero.com/images/38/72018/worm2018071020105847.png" alt="pet" style="height:100px;">
                     </div>
-                    <h2>Công nghệ</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <h2>Phân trùn quế</h2>
+                    <p>Bổ xung dưỡng chất cho đất một cách bền vững, tăng tỷ lệ nảy mầm cho hạt giống, giúp cây to khỏe.</p>
+                    <a href="/phan-trun-que-c56" class="read-more">Read more</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<div class="col-xs-12 col-sm-8 col-sm-offset-2 padding-top">
-    <h1 class="pogoSlider-slide-element" data-in="slideUp" data-out="expand" data-duration="800">Chất lượng<span> OFREZH</span> </h1>
-    <p class="pogoSlider-slide-element" data-in="slideUp" data-out="expand" data-duration="800">Chúng tôi cam kết cung cấp các sản phẩm chất lượng cao nhất, các phẩm phân bón, hoa quả, hạt giống rau hoặc hệ thống canh tác đô thị.</p>
-    <p class="header-text-button pogoSlider-slide-element hidden-xs" data-in="expand" data-out="expand" data-duration="1200"> <a href="/products" class="battn">Tất cả sản phẩm</a></p>
-</div>
+
 <section class="about-area section-padding section-relative" id="about">
     <div class="container">
         <div class="row">
@@ -73,7 +69,7 @@
                     <h2>Về chúng tôi</h2>
                 </div>
                 <div class="about-text">
-                    <h3>Những nhà quản lý và lập trình viên dày dạn kinh nghiệm</h3>
+                    <h3>Những con người sáng tạo và có tầm nhìn</h3>
                     <p>
                         Ofrezh được thành lập vào năm 2018 trên di sản của Công ty Cổ phần Mạnh Khang, một công ty thương mại chuyên về hệ thống canh tác đô thị và phân bón chất lượng cao,
                         với tầm nhìn để tạo ra một thế hệ canh tác hữu cơ bền vững trên khắp Việt Nam và khu vực Đông Nam Á.
