--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 
 }
 @section health{
-<link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
     <meta name="description" content="@commonInfo.Desc" />
-    <meta name="keywords" content="@commonInfo.Desc" />    
+    <meta name="keywords" content="@commonInfo.Desc" />
 }
 <section class="service-area padding-top gray-bg" id="service">
     <div class="container">
@@ -30,33 +30,34 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="https://media.anpero.com/images/29/82018/seed100x1002018082017502539.png" alt="pet" style="height:100px;">
-                    </div>
+                        <a href="/hat-giong-c55" class="read-more">  <img src="https://media.anpero.com/images/29/82018/seed100x1002018082017502539.png" alt="pet" style="height:100px;"></a>
+</div>
                     <h2>Hạt giống</h2>
                     <p>Củ và hạt giống được nhập từ các công ty uy tín nhất thế giới. Đảm bảo tỷ lệ nảy mầm cao. </p>
-                    <a href="/hat-giong-c55" class="read-more">Read more</a>
+                    <a href="/hat-giong-c55" class="read-more">Xem hạt giống</a>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 xs-bottom-40 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="https://media.anpero.com/images/38/72018/12018071020100629.png" alt="pet" style="height:100px;">
+                        <a href="/rau-cu-huu-co-c242" class="read-more">  <img src="https://media.anpero.com/images/29/82018/food2018082018084711.png" alt="pet" style="height:100px;"></a>
                     </div>
-                    <h2>Con người</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
-                    <a href="#" class="read-more">Read more</a>
+                    <h2>Thực phẩm</h2>
+                    <p>Rau củ, gia cầm, và trứng gia cầm hữu cơ luôn tươi ngon, được <strong>OFREZH</strong> quản lý chất lượng nghiêm khắc từ khâu hạt giống. </p>
+                    @*<a href="/rau-cu-huu-co-c242" class="read-more">Xem thực phẩm</a>*@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 xs-bottom-40  wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="https://media.anpero.com/images/38/72018/worm2018071020105847.png" alt="pet" style="height:100px;">
+                        <a href="/phan-trun-que-c56" class="read-more"><img src="https://media.anpero.com/images/38/72018/worm2018071020105847.png" alt="pet" style="height:100px;"></a>
                     </div>
                     <h2>Phân trùn quế</h2>
                     <p>Bổ xung dưỡng chất cho đất một cách bền vững, tăng tỷ lệ nảy mầm cho hạt giống, giúp cây to khỏe.</p>
-                    <a href="/phan-trun-que-c56" class="read-more">Read more</a>
+                    <a href="/phan-trun-que-c56" class="read-more">Xem sản phẩm</a>
                 </div>
             </div>
+            <br />
         </div>
     </div>
 </section>
@@ -73,9 +74,9 @@
                     <p>
                         Ofrezh được thành lập vào năm 2018 trên di sản của Công ty Cổ phần Mạnh Khang, một công ty thương mại chuyên về hệ thống canh tác đô thị và phân bón chất lượng cao,
                         với tầm nhìn để tạo ra một thế hệ canh tác hữu cơ bền vững trên khắp Việt Nam và khu vực Đông Nam Á.
-                    </p>    
+                    </p>
                     <p>
-                        Với một mạng lưới các trang trại <strong>trùn quế</strong> ngày càng phát triển và nhiều năm kinh nghiệm trong việc thiết lập hệ thống nhà kính đô thị và các hệ thống phát triển thông minh với quy mô khác nhau, 
+                        Với một mạng lưới các trang trại <strong>trùn quế</strong> ngày càng phát triển và nhiều năm kinh nghiệm trong việc thiết lập hệ thống nhà kính đô thị và các hệ thống phát triển thông minh với quy mô khác nhau,
                         Ofrezh hướng đến việc cung cấp từ trang trại đến gia đình
                     </p>
                     <div class="about-text-button">
@@ -86,7 +87,7 @@
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
                 <img src="/assets/images/about.jpg" />
             </div>
-            </div>
+        </div>
     </div>
 </section>
 <section class="photography-area  section-relative" id="philosophy">
@@ -160,8 +161,8 @@
             <div class="row">
                 <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="page-title">
-                        <h2>Cập nhật và hướng dẫn</h2>
-                        <p>Xem thêm các cập nhật về hệ thống quản lý web bán hàng tại đây <a href="/blog" title="Thiết kế web bán hàng tốt nhất">Xem thêm tại đây</a></p>
+                        <h2>Cập nhật mới nhất</h2>
+                        <p>Xem thêm các cập nhật về @commonInfo.Name tại đây <a href="/blog" title="Thiết kế web bán hàng tốt nhất">Xem thêm tại đây</a></p>
                     </div>
                 </div>
             </div>
@@ -176,8 +177,8 @@
                                     <h3><span>@Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</span></h3>
                                 </div>
                             </div>
-                            <h2>@Anpero.StringHelpper.SubString(38, item.Title)</h2>                                                        
-                            
+                            <h2>@Anpero.StringHelpper.SubString(38, item.Title)</h2>
+
                         </div>
                     </div>
 
@@ -190,8 +191,8 @@
 @Html.Partial("_partial/_contact")
 @section scripts{
 
-<script src="/assets/js/owl-carousel-min.js"></script>
-<script type="text/javascript">
+    <script src="/assets/js/owl-carousel-min.js"></script>
+    <script type="text/javascript">
         jQuery(document).ready(function () {
             $(".blog-slide").owlCarousel({
                 items: 3,
@@ -208,7 +209,7 @@
                     480: {
                         items: 2,
                     },
-                    // breakpoint from 768 up 
+                    // breakpoint from 768 up
                     768: {
                         items: 3,
                     }
@@ -230,7 +231,7 @@
         }
         $(window).scroll(sticky_relocate);
         sticky_relocate();
-</script>
+    </script>
 
     <script src="~/Scripts/Bootrap.notify.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
@@ -245,8 +246,8 @@
                 'hl': 'vi'
             });
 
-           
+
         });
-    
+
     </script>
 }
